--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="margin: 0; overflow: hidden;">
   <a-scene
-      vr-mode-ui="enabled: true"
+      vr-mode-ui="enabled: false"
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
@@ -17,7 +17,7 @@
         value="Hi!"
         look-at="[gps-camera]"
         scale="1 1 1"
-        gps-entity-place="latitude: 38.095840; longitude: -85.692730;"
+        gps-entity-place="latitude: 38.095841; longitude: -85.692730;"
 
 
       ></a-text>
