--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       value="Hello from Blue Lick!"
       look-at="[gps-camera]"
       scale="2 2 2"
-      gps-entity-place="latitude: 37.131451; longitude: -85.694695;"
+      gps-entity-place="latitude: 38.095840; longitude: -85.6927306;"
 
 
     ></a-text>
@@ -33,7 +33,7 @@
     value="Hello from down the street!"
     look-at="[gps-camera]"
     scale="2 2 2"
-    gps-entity-place="latitude: 37.131451; longitude: -85.694695;"
+    gps-entity-place="latitude: 38.0958416; longitude: -85.6927315;"
 
 
   ></a-text>
@@ -41,7 +41,7 @@
   value="Hello from one block over!"
   look-at="[gps-camera]"
   scale="2 2 2"
-  gps-entity-place="latitude: 37.131451; longitude: -85.694695;"
+  gps-entity-place="latitude: 38.095842; longitude: -85.692731;"
 
 ></a-text>
 
