--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       value="Hello from Blue Lick!"
       look-at="[gps-camera]"
       scale="2 2 2"
-      gps-entity-place="latitude: 38.095840; longitude: -85.6927306;"
+      gps-entity-place="latitude: 38.0958413; longitude: -85.6927306;"
 
 
     ></a-text>
