Added react bundle

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,6 @@
 
   </div>
 
-  <!-- <script src="bundle.js"></script> -->
+  <script src="https://mvpchattar.s3.us-east-2.amazonaws.com/bundle.js"></script>
 </body>
 </HTML>
