changes to html

--- a/public/index.html
+++ b/public/index.html
@@ -29,16 +29,12 @@
 
 
     ></a-text>
-    <a-text
-    value="Hello from down the street!"
-    look-at="[gps-camera]"
-    scale="2 2 2"
-    gps-entity-place="latitude: 38.0958416; longitude: -85.6927305;"
+
 
 
   ></a-text>
   <a-text
-  value="Hello from one block over!"
+  value="Hello from one block over! \n Hello from down the street!"
   look-at="[gps-camera]"
   scale="2 2 2"
   gps-entity-place="latitude: 38.0958419; longitude: -85.6927302;"
