commented for testing

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
     <a-camera gps-camera gps-camera="minDistance: 1, max-Distance: 50;" camera="fov: 80;" position="0 2 0" rotation-reader listener look-controls="reverseMouseDrag:true; touchEnabled: false"> </a-camera>
-      <a-text
+      <!-- <a-text
         value="Hi!"
         look-at="[gps-camera]"
         scale="2 2 2"
@@ -28,7 +28,7 @@
       gps-entity-place="latitude: 38.0958421; longitude: -85.6927311;"
 
 
-    ></a-text>
+    ></a-text> -->
 
 
 
