removed min distance

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
-    <a-camera gps-camera gps-camera="minDistance: 1, max-Distance: 50;" camera="fov: 80;" position="0 2 0" rotation-reader listener look-controls="reverseMouseDrag:true; touchEnabled: false"> </a-camera>
+    <a-camera gps-camera gps-camera="max-Distance: 50;" camera="fov: 80;" position="0 2 0" rotation-reader listener look-controls="reverseMouseDrag:true; touchEnabled: false"> </a-camera>
 
 
 
