--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   </div>
 
   <script src="https://mvpchattar.s3.us-east-2.amazonaws.com/bundle.js"></script>
-  <script src="../messages.json"></script>
+  <script src="https://sblakely01.github.io/database/messages.json"></script>
 
 </body>
 </HTML>
