--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,10 @@
 
 
   <a-text
-  value="Hello from one block over! \n Hello from down the street!"
+  value="ChatAR Box"
   look-at="[gps-camera]"
   scale="2 2 2"
-  gps-entity-place="latitude: 38.0958419; longitude: -85.6927302;"
+  gps-entity-place="latitude: 38.0958418; longitude: -85.6927302;"
 
 ></a-text>
 
